# cursor-analytics

./: .cursorrules  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  CSV_UPLOAD_README.md  CURSOR_QUICK_REFERENCE.md  CURSOR_QUICK_START.md  CURSOR_USAGE.md  HOW_TO_CREATE_AND_RUN_NOTEBOOKS.md  HOW_TO_USE.md  INSTRUCTIONS.md  MIGRATION_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_NOTEBOOKS.md  README.md  REPO_CLEANUP_STATUS.md  SETUP.md  SOLUTION_NOTE.md  SUMMARY.md  SYNC_FOLDER_RECOMMENDATIONS.md  SYNC_HOW_IT_WORKS.md  TESTING.md  TEST_AFTER_CLEANUP.md  TEST_RESULTS.md  TEST_RESULTS_REPORT.md  TEST_SUMMARY.md  USAGE_EXAMPLE.md  config.py.example  create_adyen_ml_spark.py  create_and_run_notebook_job.py  databricks_api.py  databricks_cli.py  example_notebook_with_output.py  example_query.py  mcp_server.py  (+15 more)
archive/: MCP_GUIDE.md  REFACTOR_PLAN.md
core/: __init__.py  _config.py  connection_pool.py  create_table.py  csv_to_table.py  databricks_job_runner.py  get_cluster_logs.py  inspect_table.py  interactive_sql.py  notebook_output.py  notebook_output_injector.py  output_helper.py  query_util.py  run_sql_file.py  table_inspector.py  universal_output_capture.py  unzip_csvs.py  upload_csvs.py  workspace_sync.py
cursor_analytics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
debug/: COMPARISON_RESULTS.md  README.md  ROOT_CAUSE_ANALYSIS.md  bucket_debug_output.txt  comparison_queries.sql  (+2 more)
mcp/livy/: README.md  livy_mcp_server.py  package.json  pyproject.toml
(+1291 files in other folders)
